# PhosLab

./: .gitignore  PHOSLAB_EXPLAINED.md  PHOSPHENE_MAPPING_RIGOR_PLAN.md  README.md  RESEARCH_GRADE_REFACTOR_PLAN.md  pyproject.toml
implant_explorer/: .gitignore  LICENSE  README.md  pyproject.toml
implant_explorer/data/exported_RFs/: export_rf_test.csv  exported_10_combs_rf_20260630_174102.json  exported_rf_10_combs_10x10_5mm_20260630_170752.csv  exported_rf_10_combs_10x10_5mm_20260630_170816.json  exported_rf_10_combs_20260630_174048.csv  exported_rf_4_utah_20260630_170752.csv  synthetic4ecc.csv  synthetic_4ecc_4el.csv
implant_explorer/data/human/: README.md
implant_explorer/data/nhp/: README.md
implant_explorer/implant_designs/: 10_combs_10x10 5mm LAYOUT.json  4_utah_LAYOUT.json  Comb 10x10 5mm.json  Comb 32x32 30mm.json  Shank Array.json  Thread-1024_30mm_fulls.json  Thread-1024_30mm_fulls_LAYOUT.json  Thread-3072.json  Thread-32.json  Utah Array.json
implant_explorer/src/: dataset_adapters.py  implant_explorer.py  rf_selection_utils.py
launcher/: launcher.py  main.py  pyproject.toml
percept_mapper/: .gitignore  PUPIL_SETUP.md  SCREEN_SETUP.md  WACOM_SETUP.md  analyze_last_experiment.py  calibrate_gaze.py  compare_experiments.py  generate_corrected_map.py  main.py  preview_phosphenes.py  pyproject.toml  run_learning.py  test_bayesian.py
percept_mapper/config/: coords_shanks_10x16.yaml  coords_shanks_10x32.yaml  dynaphos_params.yaml  params.yaml  protocol.yaml
percept_mapper/core/: eye_tracker.py  mouse_tracker.py  neon_tracker.py  pupil_tracker.py
percept_mapper/readme/: EXPERIMENT_PROTOCOL.md  MAPPING_METHOD_SETUP.md  PUPIL_SIGNAL_FIXES.md  SACCADE_SETUP.md  STATISTICAL_METHODS.md
percept_mapper/scripts/: analysis_results_visualizer.py  anchor_screen.py  apriltag_overlay.py  audio_cue.py  cursor_clip.py  debug_overlay.py  debug_overlay_smoke_test.py  dynaphos_adapter.py  extract_apriltags.py  gaze_trace.py  headless_runner.py  headless_runner_test.py  mapping_analyzer.py  mapping_analyzer_integration_test.py  mapping_method_smoke_test.py  multi_electrode_analyzer.py  neon_smoke_test.py  pair_mapping.py  pair_mapping_smoke_test.py  phase_runner.py  phase_runner_test.py  phosphene_mapping.py  protocol.py  protocol_drift_test.py  protocol_property_test.py  pupil_smoke_test.py  relative_map.py  relative_map_test.py  response_capture.py  response_capture_smoke_test.py  saccade_extractors.py  saccade_extractors_property_test.py  saccade_screen.py  saccade_smoke_test.py  schemas.py  schemas_property_test.py  screen_detect.py  screen_detect_smoke_test.py  show_apriltags_fullscreen.py  standard_analyzer.py  (+9 more)
(+752 files in other folders)
