[project]
name = "phoslab"
version = "0.1.0"
description = "Cortical implant explorer with receptive-field coverage analysis (slim distribution)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "nibabel>=5.4,<6",
    "matplotlib>=3.10,<4",
    "PyQt6>=6.10,<7",
    "pyqtgraph>=0.14,<1",
    "qtpy>=2.4,<3",
    "pyvista>=0.47,<1",
    "pyvistaqt>=0.11,<1",
]
