[project]
name = "launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.11.0",
    "pyyaml>=6.0",
    "phoslab",
    "simulador-protesis-cortical",
]

[tool.uv.sources]
phoslab = { workspace = true }
simulador-protesis-cortical = { workspace = true }