[project]
name = "simulador-protesis-cortical"
version = "1.0.0"
description = "Simulador de Prótesis Cortical Visual — plataforma de experimentos psicofísicos con fosfenos"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pygame>=2.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "ipykernel",
    "Pillow>=10.0.0",
    "mediapipe>=0.10.9",
    "PyYAML>=6.0",
    "dynaphos>=0.1.3",
    "dearpygui>=2.2",
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "config*", "demo*"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
