[project]
name = "simulador-protesis-cortical"
version = "1.0.0"
description = "Simulador de Prótesis Cortical Visual — plataforma de experimentos psicofísicos con fosfenos"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pygame>=2.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "ipykernel",
    "Pillow>=10.0.0",
    "mediapipe>=0.10.9",
    "PyYAML>=6.0",
    "dynaphos>=0.1.3",
    "dearpygui>=2.2",
    "torch>=2.0.0,<2.6",
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "pupil-labs-realtime-api>=1.3.6",
]

[tool.setuptools.packages.find]
include = ["core*", "config*", "demo*"]

[dependency-groups]
# Dev-only tools. `uv sync --project percept_mapper --group dev` installs them.
# Hypothesis powers the property-based tests in scripts/*_property_test.py.
dev = [
    "hypothesis>=6.100",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
